kubernetes/home/apps/default/qbittorrent/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.shaklab.com`, `qbit.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: qbittorrent
          port: 80
  tls:
    secretName: shaklab-com-tls-certs
